<resources>
    <string name="app_name">Levels_prototype</string>
    <string name="quit">Quit</string>
    <string name="hard_mode">Hard Mode</string>
    <string name="sound">Sound</string>
    <string name="resume">Resume</string>
    <string name="restart">Restart</string>
    <string name="high_score">High Score:</string>
    <string name="new_game">New Game</string>
    <string name="character">Character</string>
    <string name="settings">Settings</string>
    <string name="_100">100</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score:</string>
    <string name="_0000">0000</string>
    <string name="main_menu">Main Menu</string>
</resources>