<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0dfd5"
    android:backgroundTint="#e0dfd5"
    tools:context=".SettingsScreen">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/soundSwitch"
        style="@style/Theme.Levels_prototype"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:background="#f09d51"
        android:backgroundTint="#f09d51"
        android:buttonTint="#313638"
        android:checked="true"
        android:fontFamily="@font/press_start_2p"
        android:foregroundTint="#FFFFFF"
        android:selectAllOnFocus="true"
        android:text="Sound"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textIsSelectable="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:trackTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/resumeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194"
        app:thumbTint="#302C2C" />

    <Button
        android:id="@+id/resumeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#313638"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/resume"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#313638"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/restart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumeBtn"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/quitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#313638"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/quit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restartBtn"
        app:layout_constraintVertical_bias="0.196" />

    <ImageView
        android:id="@+id/gemImgSetScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:srcCompat="@drawable/red_gem" />

    <ImageView
        android:id="@+id/characterWalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:srcCompat="@drawable/character0_down1" />

</androidx.constraintlayout.widget.ConstraintLayout>